--- a/.dockerignore
+++ b/.dockerignore
@@ -37,3 +37,10 @@
 /app/assets/builds/*
 !/app/assets/builds/.keep
 /public/assets
+
+# Other unnecessary files
+.DS_Store
+.gitignore
+.bundleignore
+.byebug_history
+.rspec
