--- a/config/database.yml
+++ b/config/database.yml
@@ -22,7 +22,12 @@ default: &default
 development:
   <<: *default
   database: fridge_monitor_rails_development
-
+  encoding: unicode
+  database: <%= ENV['DATABASE_NAME'] %>
+  username: <%= ENV['DATABASE_USER'] %>
+  password: <%= ENV['DATABASE_PASSWORD'] %>
+  port: <%= ENV['DATABASE_PORT'] || '5432' %>
+  host: <%= ENV['DATABASE_HOST'] %>
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
@@ -53,9 +58,9 @@ development:
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
-test:
-  <<: *default
-  database: fridge_monitor_rails_test
+# test:
+  # <<: *default
+  # database: fridge_monitor_rails_test
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -77,8 +82,8 @@ test:
 # Read https://guides.rubyonrails.org/configuring.html#configuring-a-database
 # for a full overview on how database connection configuration can be specified.
 #
-production:
-  <<: *default
-  database: fridge_monitor_rails_production
-  username: fridge_monitor_rails
-  password: <%= ENV["FRIDGE_MONITOR_RAILS_DATABASE_PASSWORD"] %>
+# production:
+  # <<: *default
+  # database: fridge_monitor_rails_production
+  # username: fridge_monitor_rails
+  # password: <%= ENV["FRIDGE_MONITOR_RAILS_DATABASE_PASSWORD"] %>
